<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_marginTop="30dp"
    android:layout_height="fill_parent" tools:context="com.example.tim.myapplication.licenses">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="30dp"
            android:text="Acknowledgements"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="This application makes use of following third party libraries:"
            />



        <TextView
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body"
            android:textSize="20dp"
            android:text="Spots progress dialog"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header1"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body1"
            />
        <TextView
            android:id="@+id/header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body1"
            android:textSize="20dp"
            android:text="MaterialViewPager"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header2"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body2"
            />
        <TextView
            android:id="@+id/header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body2"
            android:textSize="20dp"
            android:text="Fancybuttons"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header3"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body3"
            />
        <TextView
            android:id="@+id/header4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body3"
            android:textSize="20dp"
            android:text="Shimmer"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header4"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body4"
            />
        <TextView
            android:id="@+id/header5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body4"
            android:textSize="20dp"
            android:text="MaterialDialog"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header5"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body5"
            />

        <TextView
            android:id="@+id/header6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body5"
            android:textSize="20dp"
            android:text="SuperToasts"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header6"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body6"
            />

        <TextView
        android:id="@+id/header7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_below="@id/body6"
        android:textSize="20dp"
        android:text="Instabug"
        android:textStyle="bold"/>
        <TextView
            android:id="@+id/body7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header7"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body7"
            />

        <TextView
            android:id="@+id/header8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body7"
            android:textSize="20dp"
            android:text="ShowcaseView"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header8"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body8"
            />
        <TextView
            android:id="@+id/header9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body8"
            android:textSize="20dp"
            android:text="WeatherLib"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header9"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body9"
            />

        <TextView
            android:id="@+id/header10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body9"
            android:textSize="20dp"
            android:text="MaterialEditText"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header10"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body10"
            />
        <TextView
            android:id="@+id/header11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body10"
            android:textSize="20dp"
            android:text="Calligraphy"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header11"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body11"
            />
        <TextView
            android:id="@+id/header12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body11"
            android:textSize="20dp"
            android:text="AppIntro"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header12"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body12"
            />
        <TextView
            android:id="@+id/header13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_below="@id/body12"
            android:textSize="20dp"
            android:text="Picasso"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/body13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header13"
            android:layout_margin="@dimen/text_margin"
            android:textSize="15dp"
            android:text="@string/body13"
            />


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
